@@ -183,7 +183,6 @@ static int   _modify_reservation(slurmdbd_conn_t *slurmdbd_conn,
 				 uint32_t *uid);
 static int   _node_state(slurmdbd_conn_t *slurmdbd_conn,
 			 persist_msg_t *msg, Buf *out_buffer, uint32_t *uid);
-static char *_node_state_string(uint16_t node_state);
 static void  _process_job_start(slurmdbd_conn_t *slurmdbd_conn,
 				dbd_job_start_msg_t *job_start_msg,
 				dbd_id_rc_msg_t *id_rc_msg);
@@ -2567,9 +2566,8 @@ static int _node_state(slurmdbd_conn_t *slurmdbd_conn,
 		node_state_msg->new_state = DBD_NODE_STATE_UP;
 
 	if (node_state_msg->new_state == DBD_NODE_STATE_UP) {
-		debug2("DBD_NODE_STATE: NODE:%s STATE:%s REASON:%s TIME:%ld",
+		debug2("DBD_NODE_STATE_UP: NODE:%s REASON:%s TIME:%ld",
 		       node_state_msg->hostlist,
-		       _node_state_string(node_state_msg->new_state),
 		       node_state_msg->reason,
 		       (long)node_state_msg->event_time);
 
@@ -2583,10 +2581,9 @@ static int _node_state(slurmdbd_conn_t *slurmdbd_conn,
 			node_state_msg->event_time);
 		xfree(node_ptr.reason);
 	} else {
-		debug2("DBD_NODE_STATE: NODE:%s STATE:%s "
-		       "REASON:%s UID:%u TIME:%ld",
+		debug2("DBD_NODE_STATE_DOWN: NODE:%s STATE:%s REASON:%s UID:%u TIME:%ld",
 		       node_state_msg->hostlist,
-		       _node_state_string(node_state_msg->new_state),
+		       node_state_string(node_state_msg->state),
 		       node_state_msg->reason,
 		       node_ptr.reason_uid,
 		       (long)node_state_msg->event_time);
@@ -2601,17 +2598,6 @@ end_it:
 	*out_buffer = slurm_persist_make_rc_msg(slurmdbd_conn->conn,
 						rc, comment, DBD_NODE_STATE);
 	return SLURM_SUCCESS;
-}
-
-static char *_node_state_string(uint16_t node_state)
-{
-	switch(node_state) {
-	case DBD_NODE_STATE_DOWN:
-		return "DOWN";
-	case DBD_NODE_STATE_UP:
-		return "UP";
-	}
-	return "UNKNOWN";
 }
 
 static void _process_job_start(slurmdbd_conn_t *slurmdbd_conn,
